# control-algos

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sim.py
controller/: FPF.py  MPPI.py  pid.py
integrator/: __init__.py  stochastic_integrator.py  wiener_rk4_maruyama.py
models/: Lorenz_63.py  UAV.py  __init__.py  bicycle_model.py
script/: Lorenz_DA.py  demo.py  obstacle_avoidance.py
src/control_algos/: __init__.py  balancing_pen.py  sim.py
src/control_algos/controller/: LQR.py  MPPI.py  koopman.py
src/control_algos/integrator/: __init__.py  stochastic_integrator.py  wiener_euler_maruyama.py  wiener_rk4_maruyama.py
src/control_algos/models/: Lorenz_63.py  UAV.py  __init__.py  inver_pen.py
src/control_algos/script/: Lorenz_DA.py  obstacle_avoidance.py  obstacle_avoidance_2.py  reference_tracking.py
src/controller/: MPPI.py  koopman.py
src/eom/: eom.py
src/models/: Lorenz_63.py  UAV.py  bicycle_model.py
src/script/: reference_tracking.py
tests/: test_.py  test_sim.py
